revert gap-fixing attempts in styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,13 +112,6 @@ body.appear {
 
 header {
   height: auto;
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  margin: 0;
-  padding: 0;
 }
 
 header .header,
@@ -177,14 +170,6 @@ pre {
 
 main > div {
   margin: 40px 16px;
-}
-
-main > *:first-child {
-  margin-top: 0 !important;
-}
-
-main > *:first-child > * > *:first-child {
-  margin-top: 0 !important;
 }
 
 input,
@@ -331,7 +316,7 @@ main > .grid-columns > .section,
 /* First section/grid-columns spacing */
 main > .section:first-of-type,
 main > .grid-columns:first-of-type {
-  margin-top: 0;
+  margin-top: var(--spacing-12);
 }
 
 /* Reset block margins inside grid */
